[tool.poetry]
name = "py-hplc"
version = "0.1.1"
description = "An unoffical Python wrapper for the SSI-Teledyne Next Generation class HPLC pumps."
license = "MIT"
homepage = "https://github.com/teauxfu/py-hplc"
authors = ["Alex W <alex@southsun.tech>"]
packages = [
    {include = "py_hplc/"},
    {include = "py_hplc/**/*.py"}
]

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
rope = "^0.18.0"
mypy = "^0.812"
isort = "^5.7.0"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
snooty = "^0.8.2-alpha.0"

[tool.black]
line-length = 88

[tool.pylint.format]
max-line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
